--- a/style.css
+++ b/style.css
@@ -1,42 +1,51 @@
-body{
-    font-family: Arial;
-    background: #f2f2f2;
-    display: flex;
-    justify-content: center;
-    padding: 40px;
+body {
+  font-family: Arial;
+  background: #f2f2f2;
+  display: flex;
+  
+  justify-content: center;
+  padding: 40px;
 }
-.container{
-    background-color: #fff;
-    padding: 30px;
+
+.container {
+  background: #fff;
+  padding: 30px;
   border-radius: 10px;
   width: 350px;
-  box-shadow: 0 0 15px rgb(0,0,0,0.1);
+  box-shadow: 0 0 15px rgba(0,0,0,0.1);
 }
+
 h1 {
   text-align: center;
 }
-.input-section{
-    display: flex;
-    gap: 10px;
-    margin-bottom: 20px;
+
+.input-section {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 20px;
 }
-input{
-    flex:1;
-     padding: 10px;
-     border: 1px solid #ccc;
+
+input {
+  flex: 1;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
+
 button {
   padding: 10px 15px;
   background: #28a745;
   color: white;
   border: none;
   border-radius: 5px;
-  cursor:pointer;
+  cursor: pointer;
 }
-ul{
-    list-style: none;
-    padding: 0;
+
+ul {
+  list-style: none;
+  padding: 0;
 }
+
 li {
   padding: 10px;
   background: #eee;
@@ -45,9 +54,8 @@ li {
   display: flex;
   justify-content: space-between;
 }
-.completed{
-   
+
+li.completed {
   text-decoration: line-through;
   color: gray;
-
 }
